--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="row">
                   <div class="col-sm-12 col-md-6 col-lg-2 bg-custom12 mb-4">
                     <div class="card bg-custom6" style="width: 16rem;">
-                      <img src="./Imagens/920b60_16c70c202f284cd6b0ff2bfbbd451407_mv2.jpeg"  class="card-img-top" style="width: 15rem;">
+                      <button class="btnDetalhe"><img src="./Imagens/920b60_16c70c202f284cd6b0ff2bfbbd451407_mv2.jpeg"  class="card-img-top" style="width: 15rem;"></button>
                       <div class="card-body">
                         <h5 class="card-title" id="titulo">Homem-Formiga e a Vespa: Quantumania</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Ação/Aventura</h6>
