--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </li>
       
       </ul>
-      <form class="d-flex bg-custom4">
+      <form class="d-flex bg-custom4" onsubmit="return false">
         <input class="form-control me-2 bg-custom2" type="search" placeholder="Digite o titulo" aria-label="Search" id="search">
        
       </form>
@@ -81,7 +81,7 @@
                     <div class="card bg-custom6" style="width: 16rem;">
                       <button class="btnDetalhe"><img src="./Imagens/920b60_16c70c202f284cd6b0ff2bfbbd451407_mv2.jpeg"  class="card-img-top" style="width: 15rem;"></button>
                       <div class="card-body">
-                        <h5 class="card-title" id="titulo">Homem-Formiga e a Vespa: Quantumania</h5>
+                        <h5 class="cardtitle" id="titulo">Homem-Formiga e a Vespa: Quantumania</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Ação/Aventura</h6>
                         <a class="text-decoration-none link-secondary bg-custom8">2023</a>
                         <a class="text-decoration-none link-secondary bg-custom9">2h 5m</a>
@@ -93,7 +93,7 @@
                     <div class="card bg-custom6 mb-4" style="width: 16rem;">
                       <img src="./Imagens/images.jpeg"  class="card-img-top" style="width: 15rem;">
                       <div class="card-body">
-                        <h5 class="card-title" id="titulo">Avatar: O Caminho da Água</h5>
+                        <h5 class="cardtitle" id="titulo">Avatar: O Caminho da Água</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Ficção científica/Ação</h6>
                         <a class="text-decoration-none link-secondary bg-custom8">2022</a>
                         <a class="text-decoration-none link-secondary bg-custom9">3h 12m</a>
@@ -105,7 +105,7 @@
                     <div class="card bg-custom6" style="width: 16rem;">
                       <img src="./Imagens/23802-cartaz.webp" class="card-img-top" style="width: 15rem;">
                       <div class="card-body">
-                        <h5 class="card-title" id="titulo">SCOOBY! O Filme</h5>
+                        <h5 class="cardtitle" id="titulo">SCOOBY! O Filme</h5>
                         <br>
                         <h6 class="card-subtitle mb-2 text-muted">Infantil/Mistério</h6>
                         <a class="text-decoration-none link-secondary bg-custom8">2020</a>
@@ -118,7 +118,7 @@
         <div class="card bg-custom6" style="width: 16rem;">
           <img src="./Imagens/56015l10_bigsal_brazil_intpayoff_4x5_d4019af6.jpeg" class="card-img-top" style="width: 15rem;">
           <div class="card-body">
-            <h5 class="card-title" id="titulo">Thor: Love and Thunder</h5>
+            <h5 class="cardtitle" id="titulo">Thor: Love and Thunder</h5>
             <br>
             <h6 class="card-subtitle mb-2 text-muted">Aventura/Ação</h6>
             <a class="text-decoration-none link-secondary bg-custom8">2022</a>
@@ -131,7 +131,7 @@
         <div class="card bg-custom6" style="width: 16rem;">
           <img src="./Imagens/5374749.jpg-c_310_420_x-f_jpg-q_x-xxyxx.jpg" class="card-img-top " style="width: 15rem;">
           <div class="card-body">
-            <h5 class="card-title" id="titulo">Narvik</h5>
+            <h5 class="cardtitle" id="titulo">Narvik</h5>
             <br>
             <h6 class="card-subtitle mb-2 text-muted">Guerra/Drama</h6>
             <a class="text-decoration-none link-secondary bg-custom8">2022</a>
@@ -149,7 +149,7 @@
         <div class="card bg-custom6" style="width: 16rem;">
           <img src="./Imagens/agente-oculto-24105342775145.jpg" class="card-img-top" style="width: 15rem;">
           <div class="card-body">
-            <h5 class="card-title" id="titulo">O Homem Cinzento (Agente Oculto)</h5>
+            <h5 class="cardtitle" id="titulo">O Homem Cinzento (Agente Oculto)</h5>
             <h6 class="card-subtitle mb-2 text-muted">Ação/Thriller</h6>
             <a class="text-decoration-none link-secondary bg-custom8">2022</a>
             <a class="text-decoration-none link-secondary bg-custom9">2h 2m</a>
@@ -161,7 +161,7 @@
         <div class="card bg-custom6" style="width: 16rem;">
           <img src="./Imagens/beta_epic_payoff_brazil_2a5f625f.webp" class="card-img-top" style="width: 15rem;">
           <div class="card-body">
-            <h5 class="card-title" id="titulo">Lightyear</h5>
+            <h5 class="cardtitle" id="titulo">Lightyear</h5>
             <br>
             <h6 class="card-subtitle mb-2 text-muted">Family/Adventure</h6>
             <a class="text-decoration-none link-secondary bg-custom8">2022</a>
@@ -174,7 +174,7 @@
         <div class="card bg-custom6" style="width: 16rem;">
           <img src="./Imagens/filme3315_cp.jpg" class="card-img-top" style="width: 15rem;">
           <div class="card-body">
-            <h5 class="card-title" id="titulo">65</h5>
+            <h5 class="cardtitle" id="titulo">65</h5>
             <br>
             <h6 class="card-subtitle mb-2 text-muted">Sci-fi/Action</h6>
             <a class="text-decoration-none link-secondary bg-custom8">2023</a>
@@ -185,9 +185,9 @@
 
       <div class="col-sm-12 col-md-6 col-lg-2 bg-custom12">
         <div class="card bg-custom6" style="width: 16rem;">
-          <img src="./Imagens/placeholder.jpg" class="card-img-top" style="width: 15rem;">
+          <img src="./Imagens" class="card-img-top" style="width: 15rem;">
           <div class="card-body">
-            <h5 class="card-title" id="titulo"></h5>
+            <h5 class="cardtitle" id="titulo"></h5>
             <h6 class="card-subtitle mb-2 text-muted"></h6>
             <a class="text-decoration-none link-secondary bg-custom8"></a>
             <a class="text-decoration-none link-secondary bg-custom9"></a>
@@ -197,9 +197,9 @@
 
       <div class="col-sm-12 col-md-6 col-lg-2 bg-custom12">
         <div class="card bg-custom6" style="width: 16rem;">
-          <img src="./Imagens/placeholder.jpg" class="card-img-top" style="width: 15rem;">
+          <img src="./Imagens" class="card-img-top" style="width: 15rem;">
           <div class="card-body">
-            <h5 class="card-title" id="titulo"></h5>
+            <h5 class="cardtitle" id="titulo"></h5>
             <h6 class="card-subtitle mb-2 text-muted"></h6>
             <a class="text-decoration-none link-secondary bg-custom8"></a>
             <a class="text-decoration-none link-secondary bg-custom9"></a>
