--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
       </div>
       <div id="listaFilmes">
 
+            </div><div id="listaFilmes2">
+
             </div>
             <div id="cardsumir">
               <div class="container">
