--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
          
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Favoritos</a>
-        </li>
+         <a class="nav-link" href="./index.html">Menu</a> 
+        </li> <a class="nav-link" href="#">Favoritos</a>
+         
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Categoria
@@ -89,7 +90,7 @@
                         <h6 class="card-subtitle mb-2 text-muted" id="genero1"></h6>
                         <a class="text-decoration-none link-secondary bg-custom8" id="ano1"></a>
                         <a class="text-decoration-none link-secondary bg-custom9" id="duracao1"></a>
-                        <div><button class="btnDetalheFilme">Detalhes</button></div>
+                        <div><button class="btnDetalheFilme" onclick="detalhesFilme('tt1630029')">Detalhes</button><button id="btnfavorite"><img id="imgfavorite" src="./Imagens/Vector.png"></button></div>
                       </div>
                     </div>
                   </div>
@@ -103,7 +104,7 @@
                         <h6 class="card-subtitle mb-2 text-muted" id="genero2"></h6>
                         <a class="text-decoration-none link-secondary bg-custom8" id="ano2"></a>
                         <a class="text-decoration-none link-secondary bg-custom9" id="duracao2"></a>
-                        <div><button class="btnDetalheFilme">Detalhes</button></div>
+                        <div><button class="btnDetalheFilme" onclick="detalhesFilme('tt12838958')">Detalhes</button><button id="btnfavorite"><img id="imgfavorite" src="./Imagens/Vector.png"></button></div>
                       </div>
                     </div>
                   </div>
@@ -117,7 +118,7 @@
                         <h6 class="card-subtitle mb-2 text-muted" id="genero3"></h6>
                         <a class="text-decoration-none link-secondary bg-custom8" id="ano3"></a>
                         <a class="text-decoration-none link-secondary bg-custom9" id="duracao3"></a>
-                        <div><button class="btnDetalheFilme">Detalhes</button></div>
+                        <div><button class="btnDetalheFilme" onclick="detalhesFilme('tt10648342')">Detalhes</button><button id="btnfavorite"><img id="imgfavorite" src="./Imagens/Vector.png"></button></div>
                       </div>
                     </div>
                   </div>
@@ -131,7 +132,7 @@
                         <h6 class="card-subtitle mb-2 text-muted" id="genero4"></h6>
                         <a class="text-decoration-none link-secondary bg-custom8" id="ano4"></a>
                         <a class="text-decoration-none link-secondary bg-custom9" id="duracao4"></a>
-                        <div><button class="btnDetalheFilme">Detalhes</button></div>
+                        <div><button class="btnDetalheFilme" onclick="detalhesFilme('tt10954600')">Detalhes</button><button id="btnfavorite"><img id="imgfavorite" src="./Imagens/Vector.png"></button></div>
                       </div>
                     </div>
                   </div>
@@ -145,7 +146,7 @@
                         <h6 class="card-subtitle mb-2 text-muted" id="genero5"></h6>
                         <a class="text-decoration-none link-secondary bg-custom8" id="ano5"></a>
                         <a class="text-decoration-none link-secondary bg-custom9" id="duracao5"></a>
-                        <div><button class="btnDetalheFilme">Detalhes</button></div>
+                        <div><button class="btnDetalheFilme" onclick="detalhesFilme('tt9737876')">Detalhes</button><button id="btnfavorite"><img id="imgfavorite" src="./Imagens/Vector.png"></button></div>
                       </div>
                     </div>
                   </div>
@@ -164,7 +165,7 @@
               <h6 class="card-subtitle mb-2 text-muted" id="genero6"></h6>
               <a class="text-decoration-none link-secondary bg-custom8" id="ano6"></a>
               <a class="text-decoration-none link-secondary bg-custom9" id="duracao6"></a>
-              <div><button class="btnDetalheFilme">Detalhes</button></div>
+              <div><button class="btnDetalheFilme" onclick="detalhesFilme('tt1649418')">Detalhes</button><button id="btnfavorite"><img id="imgfavorite" src="./Imagens/Vector.png"></button></div>
             </div>
           </div>
         </div>
@@ -178,7 +179,7 @@
               <h6 class="card-subtitle mb-2 text-muted" id="genero7"></h6>
               <a class="text-decoration-none link-secondary bg-custom8" id="ano7"></a>
               <a class="text-decoration-none link-secondary bg-custom9" id="duracao7"></a>
-              <div><button class="btnDetalheFilme">Detalhes</button></div>
+              <div><button class="btnDetalheFilme" onclick="detalhesFilme('tt10298810')">Detalhes</button><button id="btnfavorite"><img id="imgfavorite" src="./Imagens/Vector.png"></button></div>
             </div>
           </div>
         </div>
@@ -192,7 +193,7 @@
               <h6 class="card-subtitle mb-2 text-muted" id="genero8"></h6>
               <a class="text-decoration-none link-secondary bg-custom8" id="ano8"></a>
               <a class="text-decoration-none link-secondary bg-custom9" id="duracao8"></a>
-              <div><button class="btnDetalheFilme">Detalhes</button></div>
+              <div><button class="btnDetalheFilme" onclick="detalhesFilme('tt11448138')">Detalhes</button><button id="btnfavorite"><img id="imgfavorite" src="./Imagens/Vector.png"></button></div>
             </div>
           </div>
         </div>
@@ -206,7 +207,7 @@
               <h6 class="card-subtitle mb-2 text-muted" id="genero9"></h6>
               <a class="text-decoration-none link-secondary bg-custom8" id="ano9"></a>
               <a class="text-decoration-none link-secondary bg-custom9" id="duracao9"></a>
-              <div><button class="btnDetalheFilme">Detalhes</button></div>
+              <div><button class="btnDetalheFilme" onclick="detalhesFilme('tt16437278')">Detalhes</button><button id="btnfavorite"><img id="imgfavorite" src="./Imagens/Vector.png"></button></div>
             </div>
           </div>
         </div>
@@ -220,7 +221,7 @@
               <h6 class="card-subtitle mb-2 text-muted" id="genero10"></h6>
               <a class="text-decoration-none link-secondary bg-custom8" id="ano10"></a>
               <a class="text-decoration-none link-secondary bg-custom9" id="duracao10"></a>
-              <div><button class="btnDetalheFilme">Detalhes</button></div>
+              <div><button class="btnDetalheFilme" onclick="detalhesFilme('tt14502344')">Detalhes</button><button id="btnfavorite"><img id="imgfavorite" src="./Imagens/Vector.png"></button></div>
             </div>
           </div>
         </div>
